<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stockPortfolio.stockPortfolioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_margin="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/portfolioTitle"
            android:gravity="center"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="28sp"
            android:layout_weight="1"/>


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/remainingCash"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/cashView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="0"
                android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/stockList"
            android:gravity="center"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="29sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/companyName"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:background="@color/orange"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/symbol"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:background="@color/orange"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buyPrice"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/amountOwned"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorPrimary"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/stocksView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>