<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="4"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:theme="@style/heading"
                android:text="@string/about"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <TextView
                    android:padding="15dp"
                    android:textSize="25sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/appDescription"/>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="6">
            <TextView
                android:padding="9dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/teamMembers"/>
            <ImageView
                android:id="@+id/developersImg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:src="@drawable/team"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>